<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>micycle</groupId>
	<artifactId>PGS</artifactId>
	<version>2.2-SNAPSHOT</version>
	<name>Processing Geometry Suite</name>
	<description>Geometric algorithms for Processing</description>
	<url>https://github.com/micycle1/PGS</url>

	<properties>
		<sonar.projectKey>micycle1_PTS</sonar.projectKey>
		<sonar.organization>micycle</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<processing.library.dir>${user.home}/Documents/Processing/libraries/GeometrySuiteForProcessing/library</processing.library.dir>
		<maven.compiler.release>17</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<fatJarName>PGS</fatJarName>
		<maven-shade-plugin.version>3.6.1</maven-shade-plugin.version>
		<junit.version>5.11.4</junit.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>deploy</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
					<failOnError>false</failOnError>
					<subpackages>micycle.pgs</subpackages>
					<excludePackageNames>micycle.pgs.color,micycle.pgs.commons</excludePackageNames>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin> <!-- for test running -->
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-code-coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>uber-jar</id>
			<build>
				<finalName>${fatJarName}</finalName>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>${maven-shade-plugin.version}</version>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<minimizeJar>true</minimizeJar>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/**</exclude>
										<exclude>**/*.png</exclude>
										<exclude>**/*.txt</exclude>
										<exclude>**/*.ttf</exclude>
										<exclude>**/*.svg</exclude>
										<exclude>**/*.gif</exclude>
										<exclude>**/*.jpg</exclude>
										<exclude>**/*.properties</exclude>
										<exclude>processing/**</exclude>
										<exclude>org/w3c/**</exclude>
										<exclude>japplemenubar/**</exclude>
									</excludes>
								</filter>
							</filters>
							<artifactSet>
								<excludes>
									<exclude>processing:*</exclude>
								</excludes>
							</artifactSet>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>local-processing</id>
			<properties>
				<maven.javadoc.skip>true</maven.javadoc.skip>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>${maven-shade-plugin.version}</version>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<minimizeJar>true</minimizeJar>
							<finalName>GeometrySuiteForProcessing</finalName>
							<outputDirectory>${processing.library.dir}</outputDirectory>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/**</exclude>
										<exclude>**/*.png</exclude>
										<exclude>**/*.svg</exclude>
										<exclude>**/*.gif</exclude>
										<exclude>**/*.jpg</exclude>
										<exclude>**/*.properties</exclude>
										<exclude>processing/**</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>osgeo</name>
			<url>https://repo.osgeo.org/repository/release</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<name>jitpack</name>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>jts-snapshots</id>
			<url>https://repo.eclipse.org/content/repositories/jts-snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>jogamp</id> <!-- for processing -->
			<name>JogAmp</name>
			<url>https://jogamp.org/deployment/maven</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.processing</groupId>
			<artifactId>core</artifactId>
			<version>4.5.0</version>
			<scope>provided</scope> <!-- don't package into uber jar -->
			<optional>true</optional> <!-- user artifact should override when provided -->
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<version>1.20.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>grassfire4j</artifactId>
			<version>b50e08b133</version>
		</dependency>
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>Tinfour</artifactId>
			<version>8357a9ba6c</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>JMedialAxis</artifactId>
			<version>5207bec2f2</version>
			<exclusions>
				<exclusion>
					<groupId>org.locationtech.jts</groupId>
					<artifactId>jts-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>javax.vecmath</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.5.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.tinspin</groupId>
			<artifactId>tinspin-indexes</artifactId>
			<version>2.1.3</version>
		</dependency>
		<dependency> <!-- for test running -->
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency> <!-- for test running -->
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>UniformNoise</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>space-filling-curves</artifactId>
			<version>1.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.locationtech.jts</groupId>
					<artifactId>jts-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.paudan</groupId>
			<artifactId>jswarmopt</artifactId>
			<version>1.0.3a</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>TrapMap</artifactId>
			<version>1.0</version>
			<exclusions>
				<exclusion>
					<groupId>quil</groupId>
					<artifactId>processing-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>net.jafama</groupId>
			<artifactId>jafama</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.scoutant</groupId>
			<artifactId>polyline-decoder</artifactId>
			<version>5b6f55fc1a</version>
		</dependency>
		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>dsiutils</artifactId>
			<version>2.7.4</version>
			<exclusions>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>RectPacking</artifactId>
			<version>9178e79df3</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>BetterBeziers</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>Hobby-Curves</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.whitegreen</groupId>
			<artifactId>Dalsoo-Bin-Packing</artifactId>
			<version>bde2a3ef09</version>
			<exclusions>
				<exclusion>
					<groupId>org.locationtech.jts</groupId>
					<artifactId>jts-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>SRPG</artifactId>
			<version>1.0.1</version>
			<exclusions>
				<exclusion>
					<groupId>it.unimi.dsi</groupId>
					<artifactId>fastutil</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>geoblitz</artifactId>
			<version>0.9.6</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>malleo</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>quickhull3d</artifactId>
			<version>0.9.1</version>
		</dependency>
	</dependencies>

</project>
